# libdsps

./: CMakeLists.txt  Doxyfile.cmake  README.md
example/: CMakeLists.txt
example/cascaded_filters/src/: main.cc
include/dsps/: ADC.h  Abs.h  Atan2.h  Avar.h  Channel.h  ConvertType.h  CrossSpectrum.h  Decimation.h  Demodulation.h  Detrend.h  Fft.h  FileSink.h  FileSource.h  Fir.h  Gain.h  Hanning.h  Mean.h  Mixer.h  Nco.h  NoiseGenerator.h  NormalizePsddBc.h  Queue.h  Random.h  Shifter.h  SignalFromFile.h  SignalGenerator.h  Splitter.h  Sum.h  Task.h  Unwrap.h  Utils.h  WrapperFFTW.h
modules/: FindFFTW3.cmake
src/: ADC.cc  Abs.cc  Atan2.cc  Avar.cc  CMakeLists.txt  Channel.cc  ConvertType.cc  CrossSpectrum.cc  Decimation.cc  Demodulation.cc  Detrend.cc  Fft.cc  FileSource.cc  Fir.cc  Gain.cc  Hanning.cc  Mean.cc  Mixer.cc  Nco.cc  NoiseGenerator.cc  NormalizePsddBc.cc  Random.cc  Shifter.cc  SignalFromFile.cc  SignalGenerator.cc  Sum.cc  Task.cc  Unwrap.cc  Utils.cc  WrapperFFTW.cc
test/: ADCTest.cc  AbsTest.cc  Atan2Test.cc  CMakeLists.txt  ChannelTest.cc  ConvertTypeTest.cc  CrossSpectrumTest.cc  DSPTest.cc  DecimationTest.cc  DemodulationTest.cc  DetrendTest.cc  FftTest.cc  FileSinkTest.cc  FileSourceTest.cc  FirTest.cc  GainTest.cc  HanningTest.cc  MeanTest.cc  MixerTest.cc  NcoTest.cc  NoiseGeneratorTest.cc  NormalizePsddBcTest.cc  QueueTest.cc  ShifterTest.cc  SignalGeneratorTest.cc  SplitterTest.cc  SumTest.cc  TaskTest.cc  UnwrapTest.cc  UtilsTest.cc
test/local/: Utils.h  config.h.in
test/oracle/: kaiser128_40  oracle_abs.m  oracle_adc.m  oracle_atan2.m  oracle_convert_type.m  oracle_cross_spectrum.m  oracle_demodulation.m  oracle_dsp.m  oracle_fft.m  oracle_file_source_double.txt  oracle_fir.m  oracle_gain.m  oracle_hanning.m  oracle_mixer.m  oracle_nco.m  oracle_noise.m  oracle_normalize.m  oracle_phase_compute.m  oracle_signal.m  oracle_spliter.m  oracle_sum.m  oracle_unwrap.m
test/oracle/functions/: demodulation.m  load_binary.m  load_complex_binary.m  write_binary.m  write_complex_binary.m
